--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,2 +1,9 @@
 excluded:
   - Pods
+
+variable_name:
+  min_length: # only min_length
+    error: 4 # only error
+  excluded: # excluded via string array
+    - id
+    - map
